[gd_scene load_steps=4 format=3 uid="uid://d2eprpbq8ariu"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_chb3v"]
[ext_resource type="FontFile" uid="uid://c44he3ib5c4bx" path="res://Assets/vcr_osd_mono/VCR_OSD_MONO_1.001.ttf" id="2_li1uv"]
[ext_resource type="Texture2D" uid="uid://chh02c5hdu105" path="res://Assets/onslowlogo.jpeg" id="3_45tl8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chb3v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -200.0
offset_right = 96.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Start
"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Option"

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tutorial
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit
"

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_li1uv")
theme_override_font_sizes/font_size = 100

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 2000.0
offset_bottom = 1067.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_45tl8")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
